# sdl2-development-environment

./: .vimspector.json  CMakeLists.txt  README.md
src/: main.cpp
